Added ajax to index view via likes, modified api to allow updating of likes with masterKey

--- a/src/views/locations/index.ejs
+++ b/src/views/locations/index.ejs
@@ -5,6 +5,45 @@
             <h5><%= locations[i].date.toDateString() %></h5>
             <p><%= locations[i].description %></p>
         </div>
+
         <img src="<%= locations[i].images[0] %>" alt="<%= locations[i].name %> Cover Image"</img>
+
+        <button class="upLike" type="button" class="btn btn-default" data-toggle="button" aria-pressed="false">Like</button>
+
+        <span id="<%= locations[i]._id %>"><%= locations[i].likes %></span>
     </div>
 <% } %>
+
+<script>
+    setInterval(function() {
+        updateLikes();
+    }, (10 * 1000));
+
+    $('.upLike').on('click', function() {
+        let setUrl = "http://localhost:3000/api/chapters/" + $(this).siblings('span')[0].id + "?key=" + "<%= masterKey.key %>";
+        
+        $.ajax({
+            method: "PUT",
+            url: setUrl,
+            data: {
+                $addToSet: {
+                    likes: 2
+                }
+            }
+        })
+        .done(function() {
+            updateLikes();
+        });
+    });
+
+    function updateLikes() {
+        $.get('http://localhost:3000/api/chapters', function(data) {
+            <% for(let i = 0; i < locations.length; i++) { %>
+                var location = "<%= locations[i]._id %>";
+                $('#' + location).text(data.likes);
+            <% } %>
+        });
+    }
+
+    updateLikes();
+</script>
