--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1283,7 +1283,7 @@ small,
 }
 mark,
 .mark {
-  background-color: #fcf8e3;
+  background-color: #ece5bf;
   padding: .2em;
 }
 .text-left {
@@ -1357,16 +1357,16 @@ a.bg-success:hover {
   background-color: #97d37f;
 }
 .bg-info {
-  background-color: #d9edf7;
+  background-color: #bbd8e7;
 }
 a.bg-info:hover {
-  background-color: #afd9ee;
+  background-color: #95c2da;
 }
 .bg-warning {
-  background-color: #fcf8e3;
+  background-color: #ece5bf;
 }
 a.bg-warning:hover {
-  background-color: #f7ecb5;
+  background-color: #e0d598;
 }
 .bg-danger {
   background-color: #e6b9b9;
@@ -2353,14 +2353,14 @@ table th[class*="col-"] {
 .table > thead > tr.info > th,
 .table > tbody > tr.info > th,
 .table > tfoot > tr.info > th {
-  background-color: #d9edf7;
+  background-color: #bbd8e7;
 }
 .table-hover > tbody > tr > td.info:hover,
 .table-hover > tbody > tr > th.info:hover,
 .table-hover > tbody > tr.info:hover > td,
 .table-hover > tbody > tr:hover > .info,
 .table-hover > tbody > tr.info:hover > th {
-  background-color: #c4e3f3;
+  background-color: #a8cde0;
 }
 .table > thead > tr > td.warning,
 .table > tbody > tr > td.warning,
@@ -2374,14 +2374,14 @@ table th[class*="col-"] {
 .table > thead > tr.warning > th,
 .table > tbody > tr.warning > th,
 .table > tfoot > tr.warning > th {
-  background-color: #fcf8e3;
+  background-color: #ece5bf;
 }
 .table-hover > tbody > tr > td.warning:hover,
 .table-hover > tbody > tr > th.warning:hover,
 .table-hover > tbody > tr.warning:hover > td,
 .table-hover > tbody > tr:hover > .warning,
 .table-hover > tbody > tr.warning:hover > th {
-  background-color: #faf2cc;
+  background-color: #e6ddab;
 }
 .table > thead > tr > td.danger,
 .table > tbody > tr > td.danger,
@@ -2816,7 +2816,7 @@ select[multiple].form-group-lg .form-control {
 .has-warning .input-group-addon {
   color: #8a6d3b;
   border-color: #8a6d3b;
-  background-color: #fcf8e3;
+  background-color: #ece5bf;
 }
 .has-warning .form-control-feedback {
   color: #8a6d3b;
@@ -4922,23 +4922,23 @@ a.thumbnail.active {
   color: #2b542c;
 }
 .alert-info {
-  background-color: #d9edf7;
-  border-color: #bce8f1;
+  background-color: #bbd8e7;
+  border-color: #a1d3de;
   color: #31708f;
 }
 .alert-info hr {
-  border-top-color: #a6e1ec;
+  border-top-color: #8ecad7;
 }
 .alert-info .alert-link {
   color: #245269;
 }
 .alert-warning {
-  background-color: #fcf8e3;
-  border-color: #faebcc;
+  background-color: #ece5bf;
+  border-color: #e6d3ab;
   color: #8a6d3b;
 }
 .alert-warning hr {
-  border-top-color: #f7e1b5;
+  border-top-color: #e0c998;
 }
 .alert-warning .alert-link {
   color: #66512c;
@@ -5182,7 +5182,7 @@ a.list-group-item-success.active:focus {
 }
 .list-group-item-info {
   color: #31708f;
-  background-color: #d9edf7;
+  background-color: #bbd8e7;
 }
 a.list-group-item-info {
   color: #31708f;
@@ -5193,7 +5193,7 @@ a.list-group-item-info .list-group-item-heading {
 a.list-group-item-info:hover,
 a.list-group-item-info:focus {
   color: #31708f;
-  background-color: #c4e3f3;
+  background-color: #a8cde0;
 }
 a.list-group-item-info.active,
 a.list-group-item-info.active:hover,
@@ -5204,7 +5204,7 @@ a.list-group-item-info.active:focus {
 }
 .list-group-item-warning {
   color: #8a6d3b;
-  background-color: #fcf8e3;
+  background-color: #ece5bf;
 }
 a.list-group-item-warning {
   color: #8a6d3b;
@@ -5215,7 +5215,7 @@ a.list-group-item-warning .list-group-item-heading {
 a.list-group-item-warning:hover,
 a.list-group-item-warning:focus {
   color: #8a6d3b;
-  background-color: #faf2cc;
+  background-color: #e6ddab;
 }
 a.list-group-item-warning.active,
 a.list-group-item-warning.active:hover,
@@ -5540,40 +5540,40 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #b3d992;
 }
 .panel-info {
-  border-color: #bce8f1;
+  border-color: #a1d3de;
 }
 .panel-info > .panel-heading {
   color: #31708f;
-  background-color: #d9edf7;
-  border-color: #bce8f1;
+  background-color: #bbd8e7;
+  border-color: #a1d3de;
 }
 .panel-info > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #bce8f1;
+  border-top-color: #a1d3de;
 }
 .panel-info > .panel-heading .badge {
-  color: #d9edf7;
+  color: #bbd8e7;
   background-color: #31708f;
 }
 .panel-info > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #bce8f1;
+  border-bottom-color: #a1d3de;
 }
 .panel-warning {
-  border-color: #faebcc;
+  border-color: #e6d3ab;
 }
 .panel-warning > .panel-heading {
   color: #8a6d3b;
-  background-color: #fcf8e3;
-  border-color: #faebcc;
+  background-color: #ece5bf;
+  border-color: #e6d3ab;
 }
 .panel-warning > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #faebcc;
+  border-top-color: #e6d3ab;
 }
 .panel-warning > .panel-heading .badge {
-  color: #fcf8e3;
+  color: #ece5bf;
   background-color: #8a6d3b;
 }
 .panel-warning > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #faebcc;
+  border-bottom-color: #e6d3ab;
 }
 .panel-danger {
   border-color: #dfa6b0;
@@ -6554,8 +6554,8 @@ div.mapJumbotron div {
 div.mapJumbotron div.overlay {
   position: absolute;
   top: 20%;
-  left: 25%;
-  width: 50%;
+  left: 20%;
+  width: 60%;
   z-index: 2;
   background-color: rgba(255, 255, 255, 0.4);
 }
@@ -6563,7 +6563,6 @@ div.mapJumbotron div.collapsed {
   position: relative;
   top: inherit;
   left: inherit;
-  width: inherit;
   background-color: inherit;
 }
 nav {
@@ -6588,4 +6587,34 @@ form div.input-group label {
 }
 form .btn {
   margin-top: 2vh;
+}
+div.chapterOptions {
+  position: fixed;
+  top: 30%;
+  right: 0;
+  z-index: 3;
+  background-color: #bbd8e7;
+}
+div.chapterOptions .btn {
+  margin: 2vh;
+  width: 100%;
+}
+div.chapterOptions .chapterToggle {
+  float: left;
+  margin: 1vh 1vw ;
+}
+div.collapsed {
+  height: 5vh;
+  width: 5vw;
+}
+div.collapsed .btn {
+  display: none;
+}
+div.collapsed .chapterToggle {
+  float: none;
+  margin: 5% auto;
+}
+.close {
+  font-size: 3rem;
+  line-height: 3rem;
 }
