--- a/src/less/master.less
+++ b/src/less/master.less
@@ -32,8 +32,8 @@ div.mapJumbotron {
     div.overlay {
         position: absolute;;
         top: 20%;
-        left: 25%;
-        width: 50%;
+        left: 20%;
+        width: 60%;
         z-index: 2;
 
         background-color: rgba(255,255,255, 0.4);
@@ -43,7 +43,6 @@ div.mapJumbotron {
         position: relative;;
         top: inherit;
         left: inherit;
-        width: inherit;
 
         background-color: inherit;
     }
@@ -79,4 +78,42 @@ form {
     .btn {
         margin-top: 2vh;
     }
+}
+
+div.chapterOptions {
+    position: fixed;
+    top: 30%;
+    right: 0;
+    z-index: 3;
+
+    background-color: #bbd8e7;
+
+    .btn {
+        margin: 2vh;
+        width: 100%;
+    }
+
+    .chapterToggle {
+        float: left;
+        margin: 1vh 1vw ;
+    }
+}
+
+div.collapsed {
+    height: 5vh;
+    width: 5vw;
+
+    .btn {
+        display: none;
+    }
+
+    .chapterToggle {
+        float: none;;
+        margin: 5% auto;
+    }
+}
+
+.close {
+    font-size: 3rem;
+    line-height: 3rem;
 }
