--- a/src/views/locations/show.ejs
+++ b/src/views/locations/show.ejs
@@ -15,7 +15,7 @@
 <script>
     $('#overlayToggle').on('click', () => {
         $('#overlay').toggleClass('collapsed');
-        $(this).text((i, current) => {
+        $('#overlayToggle').text((i, current) => {
             return current === 'x' ?  'o' : 'x';
         });
     });
@@ -28,18 +28,27 @@
 <% }) %>
 
 <% if (locals.user && location.user.toString() === locals.user.id.toString()) { %>
-    <div class="container">
-        <div class="col col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <button type="button" class="btn btn-default btn-lg">
-            	<a href="/<%= location.id %>/edit">Rewrite Chapter</a>
-            </button>
-        </div>
+    <div class="chapterOptions collapsed">
+        <button id="chapterToggle" type="button" class="chapterToggle close" aria-label="Collapse">
+            <span aria-hidden="true">o</span>
+        </button>
 
-        <div class="col col-xs-12 col-sm-6 col-md-6 col-lg-6">
-            <form action="/<%= location.id %>" method="post">
-            	<input type="hidden" name="_method" value="delete">
-            	<input type="submit" class="btn btn-default btn-lg" value="Remove Chapter">
-            </form>
-        </div<
+        <button type="button" class="btn btn-default btn-lg">
+        	<a href="/<%= location.id %>/edit">Rewrite Chapter</a>
+        </button>
+
+        <form action="/<%= location.id %>" method="post">
+        	<input type="hidden" name="_method" value="delete">
+        	<input type="submit" class="btn btn-default btn-lg" value="Remove Chapter">
+        </form>
     </div>
 <% } %>
+
+<script>
+    $('#chapterToggle').on('click', () => {
+        $('.chapterOptions').toggleClass('collapsed');
+        $('#chapterToggle').text((i, current) => {
+            return current === 'o' ?  'x' : 'o';
+        });
+    });
+</script>
