--- a/src/less/master.less
+++ b/src/less/master.less
@@ -86,11 +86,15 @@ div.chapterOptions {
     right: 0;
     z-index: 3;
 
-    background-color: #bbd8e7;
+    background-color: @state-info-bg;
 
     .btn {
         margin: 2vh;
         width: 100%;
+    }
+
+    .btn:hover {
+        background-color: @state-warning-bg;
     }
 
     .chapterToggle {
@@ -116,4 +120,8 @@ div.collapsed {
 .close {
     font-size: 3rem;
     line-height: 3rem;
+}
+
+.btn:hover {
+    background-color: @state-info-bg;
 }
