--- a/src/views/locations/show.ejs
+++ b/src/views/locations/show.ejs
@@ -23,7 +23,7 @@
 
 <% location.images.map((image, i) => { %>
     <div class="container">
-        <img class="img-responsive" src="<%= image %>" alt="<%= location.name %> Image <%= i %>"</img>
+        <img class="img-responsive centered" src="<%= image %>" alt="<%= location.name %> Image <%= i %>"</img>
     </div>
 <% }) %>
 
