--- a/src/views/locations/index.ejs
+++ b/src/views/locations/index.ejs
@@ -10,7 +10,7 @@
 
         <button class="btn alert-info upLike" type="button" class="btn btn-default" data-toggle="button" aria-pressed="false">Like</button>
 
-        <span id="<%= locations[i]._id %>" class="likes"><%= locations[i].likes %></span>
+        <span id="<%= locations[i]._id %>" class="btn btn-default likes" disabled="disabled"><%= locations[i].likes %></span>
     </div>
 <% } %>
 
@@ -26,8 +26,8 @@
             method: "PUT",
             url: setUrl,
             data: {
-                $addToSet: {
-                    likes: 2
+                $inc: {
+                    likes: 1
                 }
             }
         })
