--- a/src/views/locations/partials/form.ejs
+++ b/src/views/locations/partials/form.ejs
@@ -39,6 +39,7 @@
     </div>
 
     <input type="hidden" name="user" value="<%= locals.user.id %>">
+    <input type="hidden" name="likes" value="0">
 
     <input type="submit" class="btn btn-default btn-lg" value="Add Chapter">
 </form>
