Added glyphicon support and added them to nav

--- a/src/less/master.less
+++ b/src/less/master.less
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import '../node_modules/bootstrap-less/bootstrap/bootstrap.less';
+@import '../node_modules/bootstrap-less/bootstrap/glyphicons.less';
 
 nav {
     background-image: url('../images/old_map.png');
