--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -4,39 +4,38 @@
             <a class="navbar-brand" href="/">
                 <img class="logo" alt="Wayfarers Logo" src="/images/wayfarers_logo_white.png">
             </a>
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-menu" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="glyphicon glyphicon-menu-hamburger"></span>
             </button>
         </div>
 
-        <div class="collapse navbar-collapse navbar-right" id="navbar-collapse-menu">
+        <div class="collapse navbar-collapse navbar-right">
             <ul class="nav nav-pills">
-                <li role="presentation"><a class="btn btn-default" href="/">Fables</a></li>
-                
+                <li role="presentation"><a class="btn btn-default" href="/"><span class="glyphicon glyphicon-home"></span> Fables</a></li>
+
                 <% if(user.id) { %>
                     <li role="presentation">
                         <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Profile <span class="caret"></span>
+                            <span class="glyphicon glyphicon-triangle-bottom"></span> Profile
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a href="/users/<%= user.id %>/edit">Edit Profile</a></li>
-                            <li><a href="/users">View Chapters</a></li>
-                            <li><a href="/new">Create Chapter</a></li>
+                            <li><a href="/users/<%= user.id %>/edit"> <span class="glyphicon glyphicon-user"></span> Edit Profile</a></li>
+                            <li><a href="/users"> <span class="glyphicon glyphicon-book"></span> View Chapters</a></li>
+                            <li><a href="/new"> <span class="glyphicon glyphicon-file"></span> Create Chapter</a></li>
                         </ul>
                     </li>
 
                     <li role="presentation"><form action="/sessions" method="post">
                         <input type="hidden" name="_method" value="delete">
-                        <input class="btn btn-default" type="submit" value="Logout">
+                        <label for="logout" class="btn btn-default"><span class="glyphicon glyphicon-log-out"></span> Logout</label>
+                        <input class="hidden" type="submit" id="logout" value="Logout">
                     </form><li>
 
                 <% } else { %>
-                    <li role="presentation"><a class="btn btn-default" href="/users/new">Register</a></li>
+                    <li role="presentation"><a class="btn btn-default" href="/users/new"><span class="glyphicon glyphicon-user"></span> Register</a></li>
 
-                    <li role="presentation"><a class="btn btn-default" href="/sessions/new">Login</a></li>
+                    <li role="presentation"><a class="btn btn-default" href="/sessions/new"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 <% } %>
             </ul>
         </div>
