--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -20,7 +20,7 @@
         </div>
 
         <div class="container-fluid">
-            <div class="row">
+            <div class="row grid">
                 <%# Main Content Goes Here%>
                 <div class="col col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
                     <%- include partials/title %>
