--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -12,7 +12,7 @@
 
         <div class="collapse navbar-collapse navbar-right">
             <ul class="nav nav-pills">
-                <li role="presentation"><a class="btn btn-default" href="/"><span class="glyphicon glyphicon-home"></span> Fables</a></li>
+                <li role="presentation"><a class="btn btn-default" href="/"><span class="glyphicon glyphicon-tent"></span> Fables</a></li>
 
                 <% if(user.id) { %>
                     <li role="presentation">
