--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -20,10 +20,12 @@
         </div>
 
         <div class="container-fluid">
-            <div class="row grid">
+            <div class="row">
                 <%# Main Content Goes Here%>
                 <div class="col col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
                     <%- include partials/title %>
+                </div>
+                <div class="col col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
                     <%- body %>
                 </div>
             </div>
