--- a/src/views/locations/partials/form.ejs
+++ b/src/views/locations/partials/form.ejs
@@ -35,7 +35,7 @@
 
     <div class="input-group col col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <label for="images">Images:</label>
-        <input type="text" class="form-control" name="images" placeholder="Add images" value="<%= location.images %>" multiple>
+        <input type="text" class="form-control" name="images" placeholder="Add images" value="<%= location.images %>">
     </div>
 
     <input type="hidden" name="user" value="<%= locals.user.id %>">
