Added slick-carousel for images on show view

--- a/src/views/locations/show.ejs
+++ b/src/views/locations/show.ejs
@@ -21,11 +21,11 @@
     });
 </script>
 
-<% location.images.map((image, i) => { %>
-    <div class="container">
-        <img class="img-responsive centered" src="<%= image %>" alt="<%= location.name %> Image <%= i %>"</img>
-    </div>
-<% }) %>
+<div id="slick-carousel" data-slick='{"slidesToShow": <%= location.images.length %>, "slidesToScroll": <%= location.images.length %>}'>
+    <% location.images.map((image, i) => { %>
+            <div><img class="img-responsive" src="<%= image %>" alt="<%= location.name %> Image <%= i %>"</img></div>
+    <% }) %>
+</div>
 
 <% if (locals.user && location.user.toString() === locals.user.id.toString()) { %>
     <div class="chapterOptions collapsed">
