--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -25,7 +25,7 @@
                 <div class="col col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
                     <%- include partials/title %>
                 </div>
-                <div class="col col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+                <div class="col col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center mb-lg-5">
                     <%- body %>
                 </div>
             </div>
