--- a/src/views/partials/stylesheets.ejs
+++ b/src/views/partials/stylesheets.ejs
@@ -1,1 +1,2 @@
 <link rel="stylesheet" type="text/css" href="/css/master.css">
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
