--- a/src/views/locations/partials/form.ejs
+++ b/src/views/locations/partials/form.ejs
@@ -33,9 +33,20 @@
         <input type="number" class="form-control" name="longitude" placeholder="Longitude" value="<%= location.longitude %>" step="any" min="-180" max="180">
     </div>
 
-    <div class="input-group col col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+    <div class="imagesWrapper input-group col col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <label for="images">Images:</label>
-        <input type="text" class="form-control" name="images" placeholder="Add images" value="<%= location.images %>">
+        <div class="input-group" name="images">
+            <% for (let i = 0; i < location.images.length; i++) { %>
+                <input type="text" class="form-control" name="image[<%= i %>]" placeholder="Add image" value="<%= location.images[i] %>">
+                <span class="input-group-btn">
+                    <button class="btn btn-default removeField" type="button">x</button>
+                </span>
+            <% } %>
+        </div>
+    </div>
+
+    <div class="input-group col col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+        <input type="button" class="btn btn-default addImages" value="+"></input>
     </div>
 
     <input type="hidden" name="user" value="<%= locals.user.id %>">
@@ -43,3 +54,26 @@
 
     <input type="submit" class="btn btn-default btn-lg" value="Add Chapter">
 </form>
+
+<script>
+$(document).ready(function() {
+    var maxFields = 10;
+    var wrapper = $('.imagesWrapper');
+    var addButton = $('.addImages');
+
+    var x = <%= location.images.length %> - 1;
+    $(addButton).click(function(e){
+        e.preventDefault();
+        if(x < maxFields){
+            x++;
+            $(wrapper).append('<div class="input-group"><input type="text" class="form-control" name="images[' + x + ']" placeholder="Add image" value="<%= location.images[' + x + '] %>"><span class="input-group-btn"><button class="btn btn-default removeField" type="button">x</button></span></div>');
+        }
+    });
+
+    $(wrapper).on('click','.removeField', function(e){
+        e.preventDefault();
+        $(this).parent('span').parent('div').remove();
+        x--;
+    })
+});
+</script>
