Likes buttons are sensitive to whether they are pressed or not allowing likes to be removed

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -6632,6 +6632,9 @@ div.collapsed .chapterToggle {
 .likes {
   font-size: 1.5rem;
 }
+.down {
+  background-color: #b6e0a5 !important;
+}
 #slick-carousel {
   margin: 5%;
 }
