--- a/src/less/master.less
+++ b/src/less/master.less
@@ -134,7 +134,11 @@ div.collapsed {
 }
 
 .likes {
-        font-size: 1.5rem;
+    font-size: 1.5rem;
+}
+
+.down {
+    background-color: @state-success-bg !important;
 }
 
 #slick-carousel {
