--- a/src/views/locations/partials/form.ejs
+++ b/src/views/locations/partials/form.ejs
@@ -37,7 +37,7 @@
         <label for="images">Images:</label>
         <div class="input-group" name="images">
             <% for (let i = 0; i < location.images.length; i++) { %>
-                <input type="text" class="form-control" name="image[<%= i %>]" placeholder="Add image" value="<%= location.images[i] %>">
+                <input type="text" class="form-control" name="images[<%= i %>]" placeholder="Add image" value="<%= location.images[i] %>">
                 <span class="input-group-btn">
                     <button class="btn btn-default removeField" type="button">x</button>
                 </span>
