--- a/src/views/locations/partials/form.ejs
+++ b/src/views/locations/partials/form.ejs
@@ -36,7 +36,13 @@
     <div class="imagesWrapper input-group col col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <label for="images">Images:</label>
         <div class="input-group" name="images">
-            <% for (let i = 0; i < location.images.length; i++) { %>
+            <% let imageslength = 0;
+                if (location.images !== undefined) {
+                    imageslength = location.images.length;
+                } else {
+                    imageslength = 0;
+                } %>
+            <% for (let i = 0; i < imageslength; i++) { %>
                 <input type="text" class="form-control" name="images[<%= i %>]" placeholder="Add image" value="<%= location.images[i] %>">
                 <span class="input-group-btn">
                     <button class="btn btn-default removeField" type="button">x</button>
@@ -60,16 +66,16 @@ $(document).ready(function() {
     var maxFields = 10;
     var wrapper = $('.imagesWrapper');
     var addButton = $('.addImages');
-
-    var x = <%= location.images.length %> - 1;
+    // location.images.length - 1;
+    var x = 1;
     $(addButton).click(function(e){
         e.preventDefault();
         if(x < maxFields){
             x++;
-            $(wrapper).append('<div class="input-group"><input type="text" class="form-control" name="images[' + x + ']" placeholder="Add image" value="<%= location.images[' + x + '] %>"><span class="input-group-btn"><button class="btn btn-default removeField" type="button">x</button></span></div>');
+            $(wrapper).append('<div class="input-group"><input type="text" class="form-control" name="images[' + x + ']" placeholder="Add image" value=""><span class="input-group-btn"><button class="btn btn-default removeField" type="button">x</button></span></div>');
         }
     });
-
+    //value= location.images[' + x + '] 
     $(wrapper).on('click','.removeField', function(e){
         e.preventDefault();
         $(this).parent('span').parent('div').remove();
