--- a/src/less/master.less
+++ b/src/less/master.less
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import '../node_modules/bootstrap-less/bootstrap/bootstrap.less';
 @import '../node_modules/bootstrap-less/bootstrap/glyphicons.less';
+//@import url('http//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css');
 
 nav {
     background-image: url('../images/old_map.png');
